Wed Jun  4 17:22:30 2008  Akinori MUSHA  <knu@iDaemons.org>

	* NEWS: Fix typos and move misplaced entries.
	  NEWS: Somehow optflags and warnflags were not actually included
	  in this release.

Tue Jun  3 19:33:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_init_copy): Take care of
	  initialize_copy as well as initialize.

	* test/ruby/test_enumerator.rb: Pull in the test suite for
	  enumerator from trunk.

Tue Jun  3 12:51:57 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_allocate, enumerator_ptr): Properly
	  detect if the object is initialized and raise error when
	  appropriate.
	  (enumerator_initialize): Fix a typo in rdoc. [ruby-core:17052]

Tue Jun  3 10:16:40 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/erb.rb (ERB::Compiler::TrimScanner#scan_line): Fix a bug
	  where tokens are not yilelded one by one.
	  (ERB::Compiler::TrimScanner#explicit_trim_line): Fix without-
	  strscan problems. [ruby_core:17028].

	* test/erb/test_erb.rb (TestERBCore#_test_01)
	  (TestERBCore#test_02_safe_04): The expected value should come
	  first for assert_equal().
	  (TestERBCoreWOStrScan): Add test class for without-strscan.

Mon Jun  2 19:47:16 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/delegate.rb (DelegateClass, Delegator#respond_to?):
	  respond_to? must take optional second argument.  This was a
	  latent bug exposed by a recent internal change of marshal.c to
	  call respond_to? with a second argument; submitted by Jeremy
	  Kemper <jeremy at bitsweat.net> in [ruby-core:17045].

Sat May 31 23:53:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* .: Release as Ruby 1.8.7.

Sat May 31 23:33:34 2008  Akinori MUSHA  <knu@iDaemons.org>

	* README, README.ja: Add a note about default C flags.

Sat May 31 22:11:15 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* version.c (ruby_description, ruby_copyright): backported from
	  1.9. bug#19002, [ruby-dev:34883]

	* error.c (report_bug): uses ruby_description.
