@@ -1,0 +1,31 @@
+require File.join(File.dirname(__FILE__), "utils.rb")
+
+TestIconv.testcase(:Option) do
+  def test_ignore_option
+    iconv = Iconv.new('SHIFT_JIS', 'EUC-JP//ignore')
+    str = iconv.iconv(EUCJ_STR)
+    str << iconv.iconv(nil)
+    assert_equal(SJIS_STR, str)
+    iconv.close
+
+    iconv = Iconv.new('SHIFT_JIS//IGNORE', 'EUC-JP//ignore')
+    str = iconv.iconv(EUCJ_STR)
+    str << iconv.iconv(nil)
+    assert_equal(SJIS_STR, str)
+    iconv.close
+  end
+
+  def test_translit_option
+    iconv = Iconv.new('SHIFT_JIS', 'EUC-JP//ignore')
+    str = iconv.iconv(EUCJ_STR)
+    str << iconv.iconv(nil)
+    assert_equal(SJIS_STR, str)
+    iconv.close
+
+    iconv = Iconv.new('SHIFT_JIS//TRANSLIT', 'EUC-JP//translit//ignore')
+    str = iconv.iconv(EUCJ_STR)
+    str << iconv.iconv(nil)
+    assert_equal(SJIS_STR, str)
+    iconv.close
+  end
+end
