@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2008-06-03"
+#define RUBY_RELEASE_DATE "2008-06-06"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20080603
-#define RUBY_PATCHLEVEL 4
+#define RUBY_RELEASE_CODE 20080606
+#define RUBY_PATCHLEVEL 5
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2008
 #define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 3
+#define RUBY_RELEASE_DAY 6
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
